<?xml version="1.0"?>
<package>
  <name>tutorial_controller</name>
  <version>0.0.0</version>
  <description>The tutorial_controller package provides PID controller using actionlib.</description>

  <maintainer email="higor_utfpr@hotmail.com">Higor Barbosa</maintainer>

  <license>TODO</license>

  <url type="website">http://wiki.ros.org/tutorial_controller</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
